# produhacks-2024

./: .gitignore  README.md
backend/: pyproject.toml  response_1711241840567.json
backend/backend/: main.py
backend/backend/internal/: chat.py  db.py  models.py  scrape.py  secrets.py
backend/backend/routers/: search.py
backend/preview/: pyproject.toml
frontend/: app.py
frontend/preview/: package-lock.json
my-app/: package-lock.json  package.json
my-app/public/: index.html
my-app/src/: App.css  App.js  index.css
my-app/src/Components/: Answers.jsx  ChatForm.jsx  Header.jsx
my-app/src/components/: History.module.css  Input.js  Input.module.css  Message.module.css
preview/: pyproject.toml
preview/preview/: Home.py  Style.css  main.py
preview/preview/.streamlit/: config.toml
preview/preview/internal/: db.py  secrets.py
preview/preview/pages/: 1_chat.py  1_💬 Chat.py  2_analytics.py  2_📊 Analytics.py  train.csv
