[tool.poetry]
name = "preview"
version = "0.1.0"
description = ""
authors = ["Bryson Wu <brysonwu@student.ubc.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.2"
cohere = "^5.1.1"
watchdog = "^4.0.0"
numpy = "^1.26.4"
plotly = "^5.20.0"
wordcloud = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
